# weather-assistant-cli

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml  pyrightconfig.json
scripts/: __init__.py  clean_reset.py  setup_dev.py
tests/: conftest.py  test_assistant.py  test_cli.py  test_config.py  test_logging_config.py  test_openai_gateway.py  test_plugins.py  test_tools.py  test_weather.py
tests/dev_scripts/: test_clean_reset.py  test_setup_dev.py
weather_assistant_cli/: __init__.py  assistant.py  cli.py  config.py  logging_config.py  openai_gateway.py  retry.py  tools.py
weather_assistant_cli/plugins/: __init__.py
weather_assistant_cli/plugins/weather/: __init__.py  _parsing.py  models.py  prompts.py  service.py
