[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weather-assistant-cli"
version = "0.1.0"
description = "weather-assistant-cli: async weather CLI with OpenAI tool calling and Open-Meteo"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openai>=2.24.0",
  "httpx>=0.27.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.6.0",
  "typing_extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
  "pre-commit>=4.0.0",
  "pyright>=1.1.390",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "respx>=0.22.0",
  "ruff>=0.8.0",
]

[tool.setuptools.packages.find]
include = ["weather_assistant_cli*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint]
select = ["ASYNC", "B", "E", "F", "I", "RUF", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
addopts = "--cov=weather_assistant_cli --cov-report=term-missing --cov-fail-under=85"
asyncio_mode = "auto"
testpaths = ["tests"]
